kubernetes/cluster-config/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rewrite-api
  namespace: default
spec:
  replacePathRegex:
    regex: ^/api(.*)
    replacement: /$1

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-rewrite-api@kubernetescrd, default-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - backend.vyntix.tech
      secretName: tls-cert-ca-key-pair
  ingressClassName: traefik
  rules:
    - host: backend.vyntix.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
